--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "lldb",
+            "name": "g++.exe build and debug active file",
+            "type": "cppdbg",
             "request": "launch",
-            "name": "Debug",
-           "program":  "${workspaceFolder}//test",
+            "program": "${workspaceFolder}\\test.exe",
             "args": [],
-           "cwd": "${workspaceFolder}",
-           "preLaunchTask": "C/C++: clang++ 生成活动文件"
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "C:\\mingw64\\bin\\gdb.exe",		/*修改成自己bin目录下的gdb.exe，这里的路径和电脑里复制的文件目录有一点不一样，这里是两个反斜杠\\*/
+            "setupCommands": [
+                {
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "task g++"
         }
     ]
 }
